--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,7 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js" integrity="sha512-7tWCg0J+CDBL4iXTB2MBsoi5SMg24GIwB5F94I16s0lqXpVbM+wLwT1kEonMyYjLBlBfrlWPS0deZfVd3Ym_2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
       body {
-        background-color: #f0f4f8; /* A light, calming blue-gray */
+        background-color: #f3f4f6; /* Fallback color */
+        background: linear-gradient(to bottom, #e0e7ff, #f3f4f6);
+        min-height: 100vh;
       }
     </style>
   <script type="importmap">
