feat(export): Integrate html-to-image library
Adds the html-to-image library to enable exporting task lists as images. Updates index.html and package.json to include the dependency and removes the script tag, opting for ESM import instead. Refactors ExportModal to use the imported library.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Task Planner</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js" integrity="sha512-7tWCg0J+CDBL4iXTB2MBsoi5SMg24GIwB5F94I16s0lqXpVbM+wLwT1kEonMyYjLBlBfrlWPS0deZfVd3Ym_2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
       body {
         background-color: #f3f4f6; /* Fallback color */
@@ -18,7 +17,8 @@
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "html-to-image": "https://esm.sh/html-to-image@1.11.11"
   }
 }
 </script>
