feat: Update app theme to orange and red palette
Refreshes the application's visual theme by changing the primary color scheme from indigo/purple to orange/red. This includes updating gradients, button colors, focus rings, and icons to provide a warmer and more vibrant user experience.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-color: #f3f4f6; /* Fallback color */
-        background: linear-gradient(to bottom, #e0e7ff, #f3f4f6);
+        background: linear-gradient(to bottom, #ffedd5, #f3f4f6);
         min-height: 100vh;
       }
     </style>
