--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "html-to-image": "https://esm.sh/html-to-image@1.11.11"
+    "html-to-image": "https://esm.sh/html-to-image@1.11.11",
+    "firebase/": "https://esm.sh/firebase@10.12.2/"
   }
 }
 </script>
